# volty

./: Cargo.toml
examples/: basic.rs
src/: lib.rs
volty-http/: Cargo.toml
volty-http/src/: bucket.rs  error.rs  lib.rs
volty-http/src/routes/: mod.rs
volty-http/src/routes/autumn/: upload_file.rs
volty-http/src/routes/channels/: invite_create.rs  message_bulk_delete.rs  message_delete.rs  message_edit.rs  message_fetch.rs  message_send.rs  mod.rs
volty-http/src/routes/invites/: invite_join.rs  mod.rs
volty-http/src/routes/servers/: member_ban.rs  member_edit.rs  member_fetch.rs  members_fetch.rs  mod.rs  role_edit.rs  server_create.rs
volty-http/src/routes/users/: mod.rs  open_dm.rs  user_edit.rs  user_fetch.rs
volty-types/: Cargo.toml
volty-types/src/: lib.rs
volty-types/src/channels/: channel.rs  channel_invite.rs  channel_unread.rs  message.rs  mod.rs  webhook.rs
volty-types/src/media/: attachment.rs  emoji.rs  mod.rs
volty-types/src/permissions/: mod.rs  permission.rs  user.rs
volty-types/src/servers/: mod.rs  server.rs  server_ban.rs  server_member.rs
volty-types/src/types/: january.rs  mod.rs  push.rs
volty-types/src/users/: bot.rs  mod.rs  user.rs
volty-types/src/util/: misc.rs  mod.rs  regex.rs  result.rs
volty-types/src/ws/: client.rs  common.rs  server.rs
volty-ws/: Cargo.toml
volty-ws/src/: cache.rs  handler.rs  lib.rs
