[package]
name = "volty"
version = "0.1.0"
edition = "2021"
description = "API wrapper for revolt.chat"
license = "MIT"

[dependencies]
volty-http = { path = "volty-http" }
volty-types = { path = "volty-types" }
volty-ws = { path = "volty-ws" }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

