[package]
name = "volty"
version = "0.1.0"
edition = "2021"
description = "API wrapper for revolt.chat"
license = "MIT"

[workspace]
members = [
    "volty-http",
    "volty-types",
    "volty-ws"
]

[dependencies]
volty-http = { path = "volty-http" }
volty-types = { path = "volty-types" }
volty-ws = { path = "volty-ws" }

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

