[package]
name = "volty-http"
version = "0.1.0"
edition = "2024"
description = "REST API client for revolt.chat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volty-types = { path = "../volty-types" }

futures = "0.3"
log = "0.4"
reqwest = { version = "0.13", features = ["json", "multipart", "rustls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.2", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
