[package]
name = "volty-types"
version = "0.1.0"
edition = "2021"
description = "API types for revolt.chat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.17"
impl_ops = "0.1"
indexmap = { version = "2.6", features = ["serde"] }
iso8601-timestamp = "0.3"
lazy_static = "1.5"
num_enum = "0.7"
once_cell = "1.20"
optional_struct = { git = "https://github.com/insertish/OptionalStruct", rev = "e275d2726595474632485934aa0887fa52281f70" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.19", features = ["derive"] }
