[package]
name = "volty-types"
version = "0.1.0"
edition = "2021"
description = "API types for revolt.chat"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.19"
impl_ops = "0.1"
indexmap = { version = "2.9", features = ["serde"] }
iso8601-timestamp = "0.3"
lazy_static = "1.5"
num_enum = "0.7"
once_cell = "1.21"
optional_struct = { git = "https://github.com/insertish/OptionalStruct", rev = "ee56427cee1f007839825d93d07fffd5a5e038c7" }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
